logs/sympy__sympy-24102.20240604_CodeR.eval.log
Task Metadata:
	- Instance ID: sympy__sympy-24102
	- Testbed: /home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12
	- Virtual Env.: sympy__sympy__1.12
	- Evaluation Model: gpt4__swe_lite_planner__t-0.00__p-0.95__c-8.00__install-1__multi_roles_rover_fl_bm25_cross_validate_re_weighted
>>>>> Applied Patch (pred_try)
>>>>> Applied Patch (pred_try)
Installation Command: source /home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpka9il349/miniconda3/bin/activate sympy__sympy__1.12 && echo 'activate successful' && python -m pip install -e .
Std. Output: activate successful
Looking in indexes: https://mirrors.tools.huawei.com/pypi/simple
Obtaining file:///home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'done'
Requirement already satisfied: mpmath>=0.19 in /home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpka9il349/miniconda3/envs/sympy__sympy__1.12/lib/python3.9/site-packages (from sympy==1.12.dev0) (1.3.0)
Installing collected packages: sympy
  Running setup.py develop for sympy
Successfully installed sympy-1.12.dev0

Std. Error: WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv


>>>>> Init Succeeded
>>>>> Applied Patch (test)
>>>>> Applied Patch (pred)
Test Script: source /home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpka9il349/miniconda3/bin/activate sympy__sympy__1.12 && echo 'activate successful' && bin/test -C --verbose sympy/parsing/tests/test_mathematica.py sympy/testing/quality_unicode.py;
Output:
activate successful
============================= test process starts ==============================
executable:         /home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpka9il349/miniconda3/envs/sympy__sympy__1.12/bin/python  (3.9.19-final-0) [CPython]
architecture:       64-bit
cache:              no
ground types:       python 
numpy:              None
random seed:        74149977
hash randomization: on (PYTHONHASHSEED=1132486971)

sympy/parsing/tests/test_mathematica.py[3] 
test_mathematica E
test_parser_mathematica_tokenizer F
test_parser_mathematica_exp_alt ok                                        [FAIL]


________________________________________________________________________________
___________ sympy/parsing/tests/test_mathematica.py:test_mathematica ___________
ValueError: Error from parse_expr with transformed code: "-Integer (6 )Symbol ('x' )"

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/core/sympify.py", line 496, in sympify
    expr = parse_expr(a, local_dict=locals, transformations=transformations, evaluate=evaluate)
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/sympy_parser.py", line 1087, in parse_expr
    raise e from ValueError(f"Error from parse_expr with transformed code: {code!r}")
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/sympy_parser.py", line 1078, in parse_expr
    rv = eval_expr(code, local_dict, global_dict)
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/sympy_parser.py", line 906, in eval_expr
    expr = eval(
  File "<string>", line 1
    -Integer (6 )Symbol ('x' )
                 ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/tests/test_mathematica.py", line 74, in test_mathematica
    assert parse_mathematica(e) == sympify(d[e])
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/mathematica.py", line 82, in parse_mathematica
    return parser.parse(s)
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/mathematica.py", line 536, in parse
    s4 = self._from_fullformlist_to_sympy(s3)
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/mathematica.py", line 1072, in _from_fullformlist_to_sympy
    return recurse(full_form_list)
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/mathematica.py", line 1070, in recurse
    return self._atom_conversions.get(expr, sympify(expr))
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/core/sympify.py", line 498, in sympify
    raise SympifyError('could not parse %r' % a, exc)
sympy.core.sympify.SympifyError: Sympify of expression 'could not parse '-6x'' failed, because of exception being raised:
SyntaxError: invalid syntax (<string>, line 1)

________________________________________________________________________________
__ sympy/parsing/tests/test_mathematica.py:test_parser_mathematica_tokenizer ___
Traceback (most recent call last):
  File "/home/workspace/swe-bench-rover/wjg/remain/testbed/475f9aff13/sympy__sympy/1.12/tmpmqq06cb2/sympy__sympy__1.12/sympy/parsing/tests/test_mathematica.py", line 122, in test_parser_mathematica_tokenizer
    assert chain("4.2") == "4.2"
AssertionError

====== tests finished: 1 passed, 1 failed, 1 exceptions, in 0.45 seconds =======
DO *NOT* COMMIT!

>>>>> Some Tests Failed
